syntax = "proto3";

service BikeServiceGrpc {
  rpc GetBikeIdsOfManager (GetBikeIdsRequest) returns (GetBikeIdsResponse);
  rpc GetManagerEmailsOfBikeId (GetManagerEmailsRequest) returns (GetManagerEmailsResponse);
}

message GetBikeIdsRequest {
  string managerEmail = 1;
}

message GetBikeIdsResponse {
  repeated int32 bikeIds = 1;
}

message GetManagerEmailsRequest {
  int32 bikeId = 1;
}

message GetManagerEmailsResponse {
  repeated string managerEmails = 1;
}
